--- a/demo/style.scss
+++ b/demo/style.scss
@@ -13,8 +13,8 @@ main {
 
 .app-container {
 
-    width: $framewidth + 60;
-    height: $frameheight + 80;
+    width: $framewidth + 20;
+    height: $frameheight + 20;
 
     background-color: black;
     border-radius: 20px;
@@ -24,13 +24,13 @@ main {
     iframe {
         width: $framewidth;
         height: $frameheight;
-        transform: translateY(-10px);
+        // transform: translateY(-10px);
     }
 }
 
 @media only screen and (max-height: $frameheight + 20) {
     .app-container {
-        transform: scale(0.6);
+        // transform: scale(0.6);
     }
 
 }
