--- a/styles.scss
+++ b/styles.scss
@@ -125,6 +125,10 @@ section {
             text-align: center;
 
             font-weight: bold;
+
+            &.figma-link {
+                background: #333;
+            }
         }
 
 
