--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,10 @@ section#app a {
   font-weight: bold;
 }
 
+section#app a.figma-link {
+  background: #333;
+}
+
 @media only screen and (max-width: 1300px) {
   header h1 {
     font-size: 96px;
